# hkd-delta

./: .ghc.environment.x86_64-linux-8.6.4  .gitignore  CHANGELOG.md  LICENSE  README.md  delta-HKD.cabal  delta-HKD.nix  hkd-delta.cabal  hkd-delta.nix  release2.nix  shell.nix
src/: Delta.hs  Test.hs
src/Delta/: Delta.hs  Type.hs
src/HKD/: Delta.hs
src/HKD/Delta/: Class.hs  Type.hs
