cabal-version:       2.0
name:                hkd-delta
version:             0.0.0.1
synopsis:            Definition of "Delta structures" for higher kinded data.
-- description:
homepage:            github.com/trevorcook/hkd-delta
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Trevor Cook
maintainer:          trevor.j.cook@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:    HKD.Delta
                      HKD.Delta.Class
                      HKD.Delta.Type
  -- other-modules:
  default-extensions:  TypeFamilies, TypeOperators,TypeFamilyDependencies,
    StandaloneDeriving, DeriveFunctor, DeriveGeneric,
    DataKinds, PolyKinds,
    MultiParamTypeClasses, DefaultSignatures, UndecidableInstances,
    FunctionalDependencies, FlexibleInstances, FlexibleContexts,
    ScopedTypeVariables, RankNTypes, AllowAmbiguousTypes, TypeApplications
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
