cabal-version:       2.0
name:                hkd-delta
version:             0.0.1
synopsis:            Definition of "Delta structures" for higher kinded data.
description:
    A library for calculating and applying differences in
    higher kinded data (HKD).

homepage:            github.com/trevorcook/hkd-delta
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Trevor Cook
maintainer:          trevor.j.cook@gmail.com
copyright:           Trevor Cook
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository this
  type: git
  location: git://github.com/trevorcook/hkd-delta.git
  tag: 0.0.1

library
  exposed-modules:    HKD.Delta
                      HKD.Delta.Class
                      HKD.Delta.Type
                      Test
  -- other-modules:
  default-extensions:  TypeFamilies, TypeOperators,TypeFamilyDependencies,
    StandaloneDeriving, DeriveFunctor, DeriveGeneric,
    DataKinds, PolyKinds,
    MultiParamTypeClasses, DefaultSignatures, UndecidableInstances,
    FunctionalDependencies, FlexibleInstances, FlexibleContexts,
    ScopedTypeVariables, RankNTypes, AllowAmbiguousTypes, TypeApplications
  build-depends:       base ^>=4.12.0.0
                      ,one-liner
  hs-source-dirs:      src
  default-language:    Haskell2010
